--- a/index.html
+++ b/index.html
@@ -19,17 +19,117 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
+    <title>Work Day Planner</title>
   </head>
 
   <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Planner</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+    <header class="jumbotron bg-white">
+      <h1 class="display-3 d-flex justify-content-center">Work Day Planner</h1>
+      <p class="lead d-flex justify-content-center pb-5">A simple calendar app for scheduling your work day</p>
+      <hr class=""/>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="col col-lg-1">
+          1 of 10
+        </div>
+        <div class="col col-md-10">
+          10 wider
+        </div>
+        <div class="col col-lg-1">
+          3 of 10
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-lg-1">
+          1 of 10
+        </div>
+        <div class="col col-md-10">
+          10 wider
+        </div>
+        <div class="col col-lg-1">
+          3 of 10
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-lg-1">
+          1 of 10
+        </div>
+        <div class="col col-md-10">
+          10 wider
+        </div>
+        <div class="col col-lg-1">
+          3 of 10
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-lg-1">
+          1 of 10
+        </div>
+        <div class="col col-md-10">
+          10 wider
+        </div>
+        <div class="col col-lg-1">
+          3 of 10
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-lg-1">
+          1 of 10
+        </div>
+        <div class="col col-md-10">
+          10 wider
+        </div>
+        <div class="col col-lg-1">
+          3 of 10
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-lg-1">
+          1 of 10
+        </div>
+        <div class="col col-md-10">
+          10 wider
+        </div>
+        <div class="col col-lg-1">
+          3 of 10
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-lg-1">
+          1 of 10
+        </div>
+        <div class="col col-md-10">
+          10 wider
+        </div>
+        <div class="col col-lg-1">
+          3 of 10
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-lg-1">
+          1 of 10
+        </div>
+        <div class="col col-md-10">
+          10 wider
+        </div>
+        <div class="col col-lg-1">
+          3 of 10
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-lg-1">
+          1 of 10
+        </div>
+        <div class="col col-md-10">
+          10 wider
+        </div>
+        <div class="col col-lg-1">
+          3 of 10
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
