--- a/index.html
+++ b/index.html
@@ -30,106 +30,127 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
-      <div class="row">
-        <div class="col col-lg-1">
-          1 of 10
+        <!-- Timeblocks go here -->
+        <!-- <table class="table table-bordered border-primary"> -->
+        <div class="row border-bottom border-top">
+          <div class="col col-lg-1 border-right">
+            <label for="task">9AM</label>
+            <!-- 9AM -->
+          </div>
+          <div class="col col-md-10" id="toDo">
+            <textarea id="task" cols="90"></textarea>
+          </div>
+          <div class="col col-lg-1 border-left">
+            <button class="saveBtn">Save</button>
+          </div>
         </div>
-        <div class="col col-md-10">
-          10 wider
+        <div class="row border-bottom">
+          <div class="col col-lg-1 border-right">
+            <label for="task">10AM</label>
+          </div>
+          <div class="col col-md-10" id="toDo">
+            <textarea id="task" cols="90"></textarea>
+          </div>
+          <div class="col col-lg-1 border-left">
+            <button class="saveBtn">Save</button>
+          </div>
         </div>
-        <div class="col col-lg-1">
-          3 of 10
+        <div class="row border-bottom">
+          <div class="col col-lg-1 border-right">
+            <label for="task">11AM</label>
+          </div>
+          <div class="col col-md-10" id="toDo">
+            <textarea id="task" cols="90"></textarea>
+          </div>
+          <div class="col col-lg-1 border-left">
+            <button class="saveBtn" id="saveBtn">Save</button>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col col-lg-1">
-          1 of 10
+        <div class="row border-bottom">
+          <div class="col col-lg-1 border-right">
+            <label for="task">12PM</label>
+          </div>
+          <div class="col col-md-10" id="toDo">
+            <textarea id="task" cols="90"></textarea>
+          </div>
+          <div class="col col-lg-1 border-left">
+            <button class="saveBtn">Save</button>
+          </div>
         </div>
-        <div class="col col-md-10">
-          10 wider
+        <div class="row border-bottom">
+          <div class="col col-lg-1 border-right">
+            <label for="task">1PM</label>
+          </div>
+          <div class="col col-md-10" id="toDo">
+            <textarea id="task" cols="90"></textarea>
+          </div>
+          <div class="col col-lg-1 border-left">
+            <button class="saveBtn">Save</button>
+          </div>
         </div>
-        <div class="col col-lg-1">
-          3 of 10
+        <div class="row border-bottom">
+          <div class="col col-lg-1 border-right">
+            <label for="task">2PM</label>
+          </div>
+          <div class="col col-md-10" id="toDo">
+            <textarea id="task" cols="90"></textarea>
+          </div>
+          <div class="col col-lg-1 border-left">
+            <button class="saveBtn">Save</button>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col col-lg-1">
-          1 of 10
+        <div class="row border-bottom">
+          <div class="col col-lg-1 border-right">
+            <label for="task">3PM</label>
+          </div>
+          <div class="col col-md-10" id="toDo">
+            <textarea id="task" cols="90"></textarea>
+          </div>
+          <div class="col col-lg-1 border-left">
+            <button class="saveBtn">Save</button>
+          </div>
         </div>
-        <div class="col col-md-10">
-          10 wider
+        <div class="row border-bottom">
+          <div class="col col-lg-1 border-right">
+            <label for="task">4PM</label>
+          </div>
+          <div class="col col-md-10" id="toDo">
+            <textarea id="task" cols="90"></textarea>
+          </div>
+          <div class="col col-lg-1 border-left">
+            <button class="saveBtn">Save</button>
+          </div>
         </div>
-        <div class="col col-lg-1">
-          3 of 10
+        <div class="row border-bottom">
+          <div class="col col-lg-1 border-right">
+            <label for="task">5PM</label>
+          </div>
+          <div class="col col-md-10" id="toDo">
+            <textarea id="task" cols="90"></textarea>
+          </div>
+          <div class="col col-lg-1 border-left">
+            <button class="saveBtn">Save</button>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col col-lg-1">
-          1 of 10
-        </div>
-        <div class="col col-md-10">
-          10 wider
-        </div>
-        <div class="col col-lg-1">
-          3 of 10
-        </div>
-      </div>
-      <div class="row">
-        <div class="col col-lg-1">
-          1 of 10
-        </div>
-        <div class="col col-md-10">
-          10 wider
-        </div>
-        <div class="col col-lg-1">
-          3 of 10
-        </div>
-      </div>
-      <div class="row">
-        <div class="col col-lg-1">
-          1 of 10
-        </div>
-        <div class="col col-md-10">
-          10 wider
-        </div>
-        <div class="col col-lg-1">
-          3 of 10
-        </div>
-      </div>
-      <div class="row">
-        <div class="col col-lg-1">
-          1 of 10
-        </div>
-        <div class="col col-md-10">
-          10 wider
-        </div>
-        <div class="col col-lg-1">
-          3 of 10
-        </div>
-      </div>
-      <div class="row">
-        <div class="col col-lg-1">
-          1 of 10
-        </div>
-        <div class="col col-md-10">
-          10 wider
-        </div>
-        <div class="col col-lg-1">
-          3 of 10
-        </div>
-      </div>
-      <div class="row">
-        <div class="col col-lg-1">
-          1 of 10
-        </div>
-        <div class="col col-md-10">
-          10 wider
-        </div>
-        <div class="col col-lg-1">
-          3 of 10
-        </div>
-      </div>
+        <!-- <tbody>
+          <tr>
+            <th>9AM</th>
+            <td colspan="10"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th scope="row">10AM</th>
+            <td colspan="10"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th scope="row">11AM</th>
+            <td colspan="10"></td>
+            <td colspan="2">@twitter</td>
+          </tr>
+        </tbody>
+      </table> -->
+      
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
