--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Planner</title>
   </head>
 
   <body>
-    <header class="jumbotron bg-white">
+    <header class="jumbotron">
       <h1 class="display-3 d-flex justify-content-center">Work Day Planner</h1>
-      <p class="lead d-flex justify-content-center pb-5">A simple calendar app for scheduling your work day</p>
-      <hr class=""/>
+      <p class="lead d-flex justify-content-center">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
@@ -37,7 +36,7 @@
             <label for="task">9AM</label>
             <!-- 9AM -->
           </div>
-          <div class="col col-md-10" id="toDo">
+          <div class="col col-md-10">
             <textarea id="task" cols="90"></textarea>
           </div>
           <div class="col col-lg-1 border-left">
@@ -48,7 +47,7 @@
           <div class="col col-lg-1 border-right">
             <label for="task">10AM</label>
           </div>
-          <div class="col col-md-10" id="toDo">
+          <div class="col col-md-10">
             <textarea id="task" cols="90"></textarea>
           </div>
           <div class="col col-lg-1 border-left">
@@ -59,18 +58,18 @@
           <div class="col col-lg-1 border-right">
             <label for="task">11AM</label>
           </div>
-          <div class="col col-md-10" id="toDo">
+          <div class="col col-md-10">
             <textarea id="task" cols="90"></textarea>
           </div>
           <div class="col col-lg-1 border-left">
-            <button class="saveBtn" id="saveBtn">Save</button>
+            <button class="saveBtn">Save</button>
           </div>
         </div>
         <div class="row border-bottom">
           <div class="col col-lg-1 border-right">
             <label for="task">12PM</label>
           </div>
-          <div class="col col-md-10" id="toDo">
+          <div class="col col-md-10">
             <textarea id="task" cols="90"></textarea>
           </div>
           <div class="col col-lg-1 border-left">
@@ -81,7 +80,7 @@
           <div class="col col-lg-1 border-right">
             <label for="task">1PM</label>
           </div>
-          <div class="col col-md-10" id="toDo">
+          <div class="col col-md-10">
             <textarea id="task" cols="90"></textarea>
           </div>
           <div class="col col-lg-1 border-left">
@@ -92,7 +91,7 @@
           <div class="col col-lg-1 border-right">
             <label for="task">2PM</label>
           </div>
-          <div class="col col-md-10" id="toDo">
+          <div class="col col-md-10">
             <textarea id="task" cols="90"></textarea>
           </div>
           <div class="col col-lg-1 border-left">
@@ -103,7 +102,7 @@
           <div class="col col-lg-1 border-right">
             <label for="task">3PM</label>
           </div>
-          <div class="col col-md-10" id="toDo">
+          <div class="col col-md-10">
             <textarea id="task" cols="90"></textarea>
           </div>
           <div class="col col-lg-1 border-left">
@@ -114,7 +113,7 @@
           <div class="col col-lg-1 border-right">
             <label for="task">4PM</label>
           </div>
-          <div class="col col-md-10" id="toDo">
+          <div class="col col-md-10">
             <textarea id="task" cols="90"></textarea>
           </div>
           <div class="col col-lg-1 border-left">
@@ -125,7 +124,7 @@
           <div class="col col-lg-1 border-right">
             <label for="task">5PM</label>
           </div>
-          <div class="col col-md-10" id="toDo">
+          <div class="col col-md-10">
             <textarea id="task" cols="90"></textarea>
           </div>
           <div class="col col-lg-1 border-left">
@@ -155,5 +154,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
