getting description value

--- a/index.html
+++ b/index.html
@@ -31,104 +31,103 @@
     <div class="container">
         <!-- Timeblocks go here -->
         <!-- <table class="table table-bordered border-primary"> -->
-        <div class="row border-bottom border-top">
-          <div class="col col-lg-1 border-right">
-            <label for="task">9AM</label>
-            <!-- 9AM -->
+        <div class="row contain border-top">
+          <div class="col-md-1 border-right">
+            9AM
           </div>
-          <div class="col col-md-10">
+          <div class="col-md-10 description">
             <textarea id="task" cols="90"></textarea>
           </div>
-          <div class="col col-lg-1 border-left">
-            <button class="saveBtn">Save</button>
+          <div class="col-md-1 border-left">
+            <button class="saveBtn col-md-10">Save</button>
           </div>
         </div>
-        <div class="row border-bottom">
-          <div class="col col-lg-1 border-right">
-            <label for="task">10AM</label>
+        <div class="row contain">
+          <div class="col-md-1 border-right">
+            10AM
           </div>
-          <div class="col col-md-10">
+          <div class="col-md-10 description">
             <textarea id="task" cols="90"></textarea>
           </div>
-          <div class="col col-lg-1 border-left">
-            <button class="saveBtn">Save</button>
+          <div class="col-md-1 border-left">
+            <button class="saveBtn col-md-10">Save</button>
           </div>
         </div>
-        <div class="row border-bottom">
-          <div class="col col-lg-1 border-right">
-            <label for="task">11AM</label>
+        <div class="row contain">
+          <div class="col-md-1 border-right">
+            11AM
           </div>
-          <div class="col col-md-10">
+          <div class="col-md-10 description">
             <textarea id="task" cols="90"></textarea>
           </div>
-          <div class="col col-lg-1 border-left">
-            <button class="saveBtn">Save</button>
+          <div class="col-md-1 border-left">
+            <button class="saveBtn col-md-10">Save</button>
           </div>
         </div>
-        <div class="row border-bottom">
-          <div class="col col-lg-1 border-right">
-            <label for="task">12PM</label>
+        <div class="row contain">
+          <div class="col-md-1 border-right">
+            12PM
           </div>
-          <div class="col col-md-10">
+          <div class="col-md-10 description">
             <textarea id="task" cols="90"></textarea>
           </div>
-          <div class="col col-lg-1 border-left">
-            <button class="saveBtn">Save</button>
+          <div class="col-md-1 border-left">
+            <button class="saveBtn col-md-10">Save</button>
           </div>
         </div>
-        <div class="row border-bottom">
-          <div class="col col-lg-1 border-right">
-            <label for="task">1PM</label>
+        <div class="row contain">
+          <div class="col-md-1 border-right">
+            1PM
           </div>
-          <div class="col col-md-10">
+          <div class="col-md-10 description">
             <textarea id="task" cols="90"></textarea>
           </div>
-          <div class="col col-lg-1 border-left">
-            <button class="saveBtn">Save</button>
+          <div class="col-md-1 border-left">
+            <button class="saveBtn col-md-10">Save</button>
           </div>
         </div>
-        <div class="row border-bottom">
-          <div class="col col-lg-1 border-right">
-            <label for="task">2PM</label>
+        <div class="row contain">
+          <div class="col-md-1 border-right">
+            2PM
           </div>
-          <div class="col col-md-10">
+          <div class="col-md-10 description">
             <textarea id="task" cols="90"></textarea>
           </div>
-          <div class="col col-lg-1 border-left">
-            <button class="saveBtn">Save</button>
+          <div class="col-md-1 border-left">
+            <button class="saveBtn col-md-10">Save</button>
           </div>
         </div>
-        <div class="row border-bottom">
-          <div class="col col-lg-1 border-right">
-            <label for="task">3PM</label>
+        <div class="row contain">
+          <div class="col-md-1 border-right">
+            3PM
           </div>
-          <div class="col col-md-10">
+          <div class="col col-md-10 description">
             <textarea id="task" cols="90"></textarea>
           </div>
-          <div class="col col-lg-1 border-left">
-            <button class="saveBtn">Save</button>
+          <div class="col col-md-1 border-left">
+            <button class="saveBtn col-md-10">Save</button>
           </div>
         </div>
-        <div class="row border-bottom">
-          <div class="col col-lg-1 border-right">
-            <label for="task">4PM</label>
+        <div class="row contain">
+          <div class="col col-md-1 border-right">
+            4PM
           </div>
-          <div class="col col-md-10">
+          <div class="col col-md-10 description">
             <textarea id="task" cols="90"></textarea>
           </div>
-          <div class="col col-lg-1 border-left">
-            <button class="saveBtn">Save</button>
+          <div class="col col-md-1 border-left">
+            <button class="saveBtn col-md-10">Save</button>
           </div>
         </div>
-        <div class="row border-bottom">
-          <div class="col col-lg-1 border-right">
-            <label for="task">5PM</label>
+        <div class="row contain">
+          <div class="col col-md-1 border-right">
+            5PM
           </div>
-          <div class="col col-md-10">
+          <div class="col col-md-10 description">
             <textarea id="task" cols="90"></textarea>
           </div>
-          <div class="col col-lg-1 border-left">
-            <button class="saveBtn">Save</button>
+          <div class="col col-md-1 border-left">
+            <button class="saveBtn col-md-10">Save</button>
           </div>
         </div>
         <!-- <tbody>
