updating the html and getting the value of the textarea input

--- a/index.html
+++ b/index.html
@@ -1,158 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Work Day Planner</title>
-  </head>
-
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3 d-flex justify-content-center">Work Day Planner</h1>
-      <p class="lead d-flex justify-content-center">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-        <!-- Timeblocks go here -->
-        <!-- <table class="table table-bordered border-primary"> -->
-        <div class="row contain border-top">
-          <div class="col-md-1 border-right">
-            9AM
-          </div>
-          <div class="col-md-10 description">
-            <textarea id="task" cols="90"></textarea>
-          </div>
-          <div class="col-md-1 border-left">
-            <button class="saveBtn col-md-10">Save</button>
-          </div>
-        </div>
-        <div class="row contain">
-          <div class="col-md-1 border-right">
-            10AM
-          </div>
-          <div class="col-md-10 description">
-            <textarea id="task" cols="90"></textarea>
-          </div>
-          <div class="col-md-1 border-left">
-            <button class="saveBtn col-md-10">Save</button>
-          </div>
-        </div>
-        <div class="row contain">
-          <div class="col-md-1 border-right">
-            11AM
-          </div>
-          <div class="col-md-10 description">
-            <textarea id="task" cols="90"></textarea>
-          </div>
-          <div class="col-md-1 border-left">
-            <button class="saveBtn col-md-10">Save</button>
-          </div>
-        </div>
-        <div class="row contain">
-          <div class="col-md-1 border-right">
-            12PM
-          </div>
-          <div class="col-md-10 description">
-            <textarea id="task" cols="90"></textarea>
-          </div>
-          <div class="col-md-1 border-left">
-            <button class="saveBtn col-md-10">Save</button>
-          </div>
-        </div>
-        <div class="row contain">
-          <div class="col-md-1 border-right">
-            1PM
-          </div>
-          <div class="col-md-10 description">
-            <textarea id="task" cols="90"></textarea>
-          </div>
-          <div class="col-md-1 border-left">
-            <button class="saveBtn col-md-10">Save</button>
-          </div>
-        </div>
-        <div class="row contain">
-          <div class="col-md-1 border-right">
-            2PM
-          </div>
-          <div class="col-md-10 description">
-            <textarea id="task" cols="90"></textarea>
-          </div>
-          <div class="col-md-1 border-left">
-            <button class="saveBtn col-md-10">Save</button>
-          </div>
-        </div>
-        <div class="row contain">
-          <div class="col-md-1 border-right">
-            3PM
-          </div>
-          <div class="col col-md-10 description">
-            <textarea id="task" cols="90"></textarea>
-          </div>
-          <div class="col col-md-1 border-left">
-            <button class="saveBtn col-md-10">Save</button>
-          </div>
-        </div>
-        <div class="row contain">
-          <div class="col col-md-1 border-right">
-            4PM
-          </div>
-          <div class="col col-md-10 description">
-            <textarea id="task" cols="90"></textarea>
-          </div>
-          <div class="col col-md-1 border-left">
-            <button class="saveBtn col-md-10">Save</button>
-          </div>
-        </div>
-        <div class="row contain">
-          <div class="col col-md-1 border-right">
-            5PM
-          </div>
-          <div class="col col-md-10 description">
-            <textarea id="task" cols="90"></textarea>
-          </div>
-          <div class="col col-md-1 border-left">
-            <button class="saveBtn col-md-10">Save</button>
-          </div>
-        </div>
-        <!-- <tbody>
-          <tr>
-            <th>9AM</th>
-            <td colspan="10"></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th scope="row">10AM</th>
-            <td colspan="10"></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th scope="row">11AM</th>
-            <td colspan="10"></td>
-            <td colspan="2">@twitter</td>
-          </tr>
-        </tbody>
-      </table> -->
-      
+<head>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta http-equiv="X-UA-Compatible" content="ie=edge">
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+ <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="./assets/css/style.css">
+ <title>Work Day Scheduler</title>
+</head>
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <div id="hour-9" class="row time-block">
+      <div class="col-md-1 hour">
+        9AM
+      </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/js/script.js"></script>
-  </body>
+    <div id="hour-10" class="row time-block">
+      <div class="col-md-1 hour">
+        10AM
+      </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div id="hour-11" class="row time-block">
+      <div class="col-md-1 hour">
+        11AM
+      </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div id="hour-12" class="row time-block">
+      <div class="col-md-1 hour">
+        12PM
+      </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div id="hour-13" class="row time-block">
+      <div class="col-md-1 hour">
+        1PM
+      </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div id="hour-14" class="row time-block">
+      <div class="col-md-1 hour">
+        2PM
+      </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div id="hour-15" class="row time-block">
+      <div class="col-md-1 hour">
+        3PM
+      </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div id="hour-16" class="row time-block">
+      <div class="col-md-1 hour">
+        4PM
+      </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div id="hour-17" class="row time-block">
+      <div class="col-md-1 hour">
+        5PM
+      </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="./assets/js/script.js"></script>
+</body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
